# equilibrium_calculator

./: .gitignore  Dockerfile  main.py  pyproject.toml
src/: EquilibriumConstant.py  constant_data.py  funcs.py  main.py  plots.py
