[project]
name = "equilibrium-calculator"
version = "0.1.0"
description = "Chemical equilibrium calculator for aqueous solutions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "plotly>=6.0.1",
    "scipy>=1.15.2",
    "streamlit>=1.45.0",
]

[dependency-groups]
dev = [
    "anywidget>=0.9.18",
    "notebook>=7.4.1",
    "ruff>=0.11.7",
]
